# dcard

./: README.md  dcard(1) (1).xlsx  dcard.py  main.py  pyproject.toml  requirements.txt
data/raw/: dcard_3000.csv
data/raw/sitemaps/: dcard_posts_part_001.json  dcard_posts_part_002.json  dcard_posts_part_003.json  dcard_posts_part_004.json  dcard_posts_part_005.json  dcard_posts_part_006.json
data/raw/sitemaps_outputs/: dcard_posts_part_001.csv  dcard_posts_part_002.csv  dcard_posts_part_003.csv  dcard_posts_part_004.csv  dcard_posts_part_005.csv  dcard_posts_part_006.csv
data/vector/: bm25_index.pkl  config.json  metadata.csv  sbert_embeddings.npy
src/: csv_to_webscraper_sitemap.py  main.py  merge_dcard_posts.py  train.py
